syntax = "proto3";

package auth;

service AuthService {
  rpc createCredential (CreateCredentialRequest) returns (CreateCredentialResponse);
  rpc findCredential (FindCredentialRequest) returns (FindCredentialResponse);
  rpc validateCredential (ValidateCredentialRequest) returns (ValidateCredentialResponse);
  rpc issueToken (IssueTokenRequest) returns (IssueTokenResponse);
}

message CreateCredentialRequest {
  string username = 1;
  string password = 2;
}

message CreateCredentialResponse {
  string clientId = 1;
}

message FindCredentialRequest {
  string id = 1;
}

message FindCredentialResponse {
  string id = 1;
  string username = 2;
  string createdAt = 3;
  string updatedAt = 4;
}

message ValidateCredentialRequest {
  string username = 1;
  string password = 2;
}

message ValidateCredentialResponse {
  bool isValid = 1;
}

message IssueTokenRequest {
  string username = 1;
  string password = 2;
}

message IssueTokenResponse {
  bytes accessToken = 1;
  bytes refreshToken = 2;
}